--- a/app/src/main/res/layout/notification_custom_layout.xml
+++ b/app/src/main/res/layout/notification_custom_layout.xml
@@ -8,7 +8,7 @@
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:padding="10dp"
-        android:src="@drawable/ic_notify"/>
+        android:src="@drawable/ic_notification"/>
     
     <LinearLayout
         android:layout_width="match_parent"
