--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -31,18 +31,17 @@
             android:id="@+id/tvCalender"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="28dp"
             android:drawableStart="@drawable/ic_calender"
             android:drawablePadding="15dp"
-            android:hint="No due date specify"
-            android:padding="20sp"
+            android:hint="Due date"
+            android:padding="20dp"
             android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/edtTaskName" />
-
+            app:layout_constraintTop_toBottomOf="@+id/dateAndTimeSelector" />
 
         <TextView
             android:id="@+id/tv_time_picker"
@@ -51,8 +50,8 @@
             android:layout_marginTop="24dp"
             android:drawableStart="@drawable/ic_time_picker"
             android:drawablePadding="15dp"
-            android:hint="Time"
-            android:padding="20sp"
+            android:hint="Due time"
+            android:padding="20dp"
             android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -60,6 +59,47 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvCalender" />
 
+        <TextView
+            android:id="@+id/dateAndTimeSelector"
+            android:layout_width="match_parent"
+            android:padding="20dp"
+            android:drawablePadding="15dp"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="28dp"
+            android:text="Create alarm"
+            android:drawableStart="@drawable/ic_notification_on"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/edtTaskName" />
+
+
+        <TextView
+            android:id="@+id/markCompleted"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:padding="20dp"
+            android:text="Task completed"
+            android:textStyle="bold"
+            android:textSize="24sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_time_picker" />
+
+        <CheckBox
+            android:id="@+id/taskCompletedCheckbox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="60dp"
+            android:layout_marginBottom="24dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.727"
+            app:layout_constraintStart_toEndOf="@+id/markCompleted" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </ScrollView>
