Add function which hides virtual keyboard on arrow backpress

--- a/app/src/main/res/menu/menu_bar.xml
+++ b/app/src/main/res/menu/menu_bar.xml
@@ -6,5 +6,10 @@
     android:title="Delete All Items"
     app:showAsAction="never"/>
 
+    <item android:id="@+id/search_filter"
+        android:title="Search"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_search_filter"/>
+
 
 </menu>
